# nanoGPT

./: .gitignore  CLAUDE.md  config.py  debug_log.md  debug_log_gpu.md  fetch_results.sh  make_grid.sh  model.py  pi.py  plot.py  pyproject.toml  sample.py  scratch.txt  script.sh  shakespeare_config.py  sweep_diffmol.sh  tmp.txt  train.py  train_backup.py  utils.py
config/: face_ar_config.py  face_ard_linear_raster_config.py  face_diffmol_config.py  face_fft_config.py  face_hilbert_raster_config.py  face_hnet_config.py  face_linear_mol_config.py  face_linear_raster_config.py  face_mdct_config.py  rotation_face_config.py  shakespeare_config.py  train_image_fft.py  train_image_mdct.py  train_image_raster.py
data/hq_english/: prepare.py
data/image_anime_face/: prepare.py  utils.py
data/image_ffhq64/: prepare.py
data/image_fft/: prepare.py
data/image_hilbert/: prepare.py
data/image_imagenet64/: prepare.py
data/image_mdct/: prepare.py
data/image_raster/: prepare.py
data/shakespeare_char/: prepare.py
data_utils/: mdct.py
models/: ar_diffusion.py  ar_diffusion_chatgpt.py  categorical.py  dmol.py  layernorm.py  lm.py  mamba.py  model.py  mol.py  rotation.py  utils.py
models/hnet/: model.py  router.py
models/hnet_rough/: 2stage_xl_config.py  block.py  hnet.py  router.py  routing_modules.py  stage.py  tokenizer.py  utils.py
tests/: test_ard_s1.py  test_hilbert.py  visualize_hilbert_boundaries.py
