[project]
name = "nanogpt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets===3.6.0",
    "einops>=0.8.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "wandb>=0.21.1",
]
